# handoff

./: .gitignore  LICENSE  README.md  install.sh  pyproject.toml  uninstall.sh
.github/workflows/: ci.yml
docs/: reference.md
examples/: context-sample.md
scripts/: session-handoff.sh  session_handoff.py
tests/: test_session_handoff.py
