[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "handoff"
version = "0.3.1"
description = "AI session memory that survives context compaction in Claude Code and Cursor."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
dependencies = []  # pure stdlib - nothing to install

[project.urls]
Homepage = "https://github.com/YOUR_GITHUB_USERNAME/handoff"
Issues   = "https://github.com/YOUR_GITHUB_USERNAME/handoff/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["scripts*"]
